tests/src/frontend/typechecking/invalid/frozen_tparam_expr_dot_3.sk
mutable class Foo(x: mutable Array<Int>)

fun no<T: mutable Foo>(x: T): void {
  _ = freeze(x) with {x => mutable Array[0]}
}
